--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,9 @@ repos:
     hooks:
     - id: flake8
       entry: flake8 src
+
+- repo: https://github.com/pycqa/pylint
+    rev: 2.6.0
+    hooks:
+    - id: pylint
+      entry: pylint src
