--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install black
-          make black
+          black --check .
 
   run_flake8_job:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install flake8
-          make flake8
+          flake8 --check .
 
   run_pylint_job:
     runs-on: ubuntu-latest
@@ -24,4 +24,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pylint
-          make pylint
+          pylint --check .
