--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -1,4 +1,4 @@
-name: Practice Workflow
+name: Project Workflow
 on: push
 
 jobs:
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install black
-          black --check .
+          make black
 
   run_flake8_job:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install flake8
-          flake8 --check .
+          make flake8
 
   run_pylint_job:
     runs-on: ubuntu-latest
@@ -24,4 +24,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pylint
-          pylint --check .
+          make pylint
