--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -9,6 +9,7 @@ jobs:
       - run: |
           pip install black
           make black
+          
 
   run_flake8_job:
     runs-on: ubuntu-latest
@@ -31,4 +32,5 @@ jobs:
     steps:      
       - uses: actions/checkout@v3
       - run: |
-          pytest
+          pip install pytest
+          pytest 
