--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -33,4 +33,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pytest
-          pytest 
+          pytest tests/test_fail.py
+          pytest tests/test_path.py
