--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -32,5 +32,7 @@ jobs:
     steps:      
       - uses: actions/checkout@v3
       - run: |
+          pip install -e h2activity_package
           pip install pytest
           pytest tests/test_path.py
+          pytest tests/test_fail.py
