added dir path to test fail

--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -40,6 +40,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pytest
-          cd project-nanyasrivastav
           pytest tests/test_path.py
-          pytest tests/test_fail.py
+          pytest project-nanyasrivastav/tests/test_fail.py
