--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -41,4 +41,4 @@ jobs:
       - run: |
           pip install pytest
           pytest tests/test_path.py
-          pytest project-nanyasrivastav/tests/test_fail.py
+          pytest tests/test_fail.py
