--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:      
       - uses: actions/checkout@v3
       - run: |
-          pip install -e h2activity_package
+          pip install -e src
 
   run_black_job:
     runs-on: ubuntu-latest
@@ -40,4 +40,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pytest
-          pytest tests/test_path.py
+          pytest src/h2activity/tests
