--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -40,4 +40,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pytest
-          pytest src/h2activity/tests
+          cd src
+          pytest tests
