--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -40,4 +40,6 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pytest 
+          cd src
           pytest tests/test_path.py
+          pytest tests/test_fail.py
