--- a/.github/workflows/project-workflow.yaml
+++ b/.github/workflows/project-workflow.yaml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           pip install pytest 
-          import pandas as pd
+          import pandas
           cd src
           pytest tests/test_path.py
           pytest tests/test_fail.py
